--- a/DScaler/Help/GradualNoise.htm
+++ b/DScaler/Help/GradualNoise.htm
@@ -3,7 +3,7 @@
 <!-- #BeginTemplate "/Templates/dtvnormal.dwt" -->
 <head>
 <!-- #BeginEditable "doctitle" -->
-<title>DScaler -- Gradual Noise filter</title>
+<title>DScaler &mdash; Gradual Noise filter</title>
 <!-- #EndEditable -->
 <meta http-equiv="Content-Type" content=
 "text/html; charset=iso-8859-1">
@@ -56,14 +56,14 @@ height="2"></td>
 <td colspan="3">
 <!-- #BeginEditable "Text" -->
 <p>
-This filter cleans up the picture, averaging out visual noise between frames.
+This filter cleans up the picture, averag&shy;ing out visual noise between frames.
 </p>
 
 <p>
-When colors change just a little, the filter decides that it's probably noise,
-and only slightly changes the color from the previous frame. As the change in color
-increases, the filter becomes more and more convinced that the change is due to motion
-rather than noise -- and the new color gets more and more weight.
+When colors change just a little, the filter decides that it&rsquo;s prob&shy;ably noise,
+and only slight&shy;ly changes the color from the pre&shy;vious frame. As the change in color
+increases, the filter becomes more and more con&shy;vinced that the change is due to motion
+rather than noise&nbsp;&mdash; and the new color gets more and more weight.
 </p>
 
 <HR>
@@ -72,19 +72,22 @@ Noise Reduction
 </font></b></p>
 
 <p>
-There's just one setting -- <font color="#993300">Noise Reduction</font>.
+There&rsquo;s just one setting&nbsp;&mdash; <font color="#993300">Noise Reduc&shy;tion</font>.
 </p>
 
 <P>
-The higher you set it, the more you'll cut down on noise -- but the more blurring you will see.
-In general, reasonable settings range from 10 (to soften the occasional speckle without
-artifacts) to 25 (to reduce noise with minimal artifacts) to 45 (for better reduction, but visible blurring) up to 80 (to average out really heavy noise at the cost of bad
-blurring). At extremely high <font color="#993300">Noise Reduction</font> values, you'll start to see artifactual vertical lines.
+The higher you set it, the more you&rsquo;ll cut down on noise&nbsp;&mdash; but the more blur&shy;ring you will see.
+In general, reason&shy;able set&shy;tings range from 10 (to soften the occa&shy;sional speckle without
+artifacts) to 25 (to reduce noise with min&shy;imal artifacts) to 45 (for better reduc&shy;tion, but visible
+blur&shy;ring) up to 80 (to average out really heavy noise at the cost of bad
+blur&shy;ring). At extreme&shy;ly high <font color="#993300">Noise Reduc&shy;tion</font>
+values, you&rsquo;ll start to see artifact&shy;ual verti&shy;cal lines.
 </P>
 
 <p>
-To choose a setting for it, turn on just about any comedy or drama -- anything with close-ups of moving faces. Increase
-<font color="#993300">Noise Reduction</font> until the suppression of noise doesn't
+To choose a setting for it, turn on just about any comedy or drama&nbsp;&mdash; any&shy;thing with
+close-ups of moving faces. Increase <font color="#993300">Noise Reduc&shy;tion</font> until the
+sup&shy;pres&shy;sion of noise doesn&rsquo;t
 seem worth the blur.
 </p>
 
@@ -95,12 +98,12 @@ Noise Notes
 <font></b></p>
 
 <P>
-You might want to take a look at <A HREF="AdaptiveNoise.htm#Fun With Noise">Fun With Noise</A>, a discussion of noise filtering in general.
+You might want to take a look at <A HREF="AdaptiveNoise.htm#Fun With Noise">Fun With Noise</A>, a discus&shy;sion of noise filter&shy;ing in general.
 </P>
 
 <p>
-Don't run this filter at the same time as the Temporal Noise Filter. Together they give you the "comical posterization
-and speckling" filter.
+Don&rsquo;t run this filter at the same time as the Tem&shy;por&shy;al Noise Filter. Together they give you the &ldquo;comical poster&shy;iza&shy;tion
+and speckling&rdquo; filter.
 </p>
 
 
